# bdo-timer-tauri

./: COMPARISON.md  README.md  SETUP.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
